# grub-kernel-updater

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  adjust.py  docker-compose.yml  grub_conf_test.py  pyproject.toml  requirements.txt  set_default_grub_version.py  setup.py  tox.ini
.github/workflows/: docker-tests.yml  python-tests.yml
docs/: architecture.md  docker.md  index.md  usage.md
examples/: basic_usage.py
grub_kernel_updater/: __init__.py  __main__.py  cli.py  config.py  core.py  modifier.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py  test_modifier.py
